同步最新源码

--- a/demo.html
+++ b/demo.html
@@ -88,6 +88,14 @@ Sition('demo','downCenter',function(ev){
    alert('向下滑动-居中')
 });
 
+Sition('demo','upCenterIng',function(ev){
+   console.log('向上滑动-居中-ing')
+});
+
+Sition('demo','downCenterIng',function(ev){
+   console.log('向下滑动-居中-ing')
+});
+
 
 Sition('demo','down',function(ev){
    console.log(ev);
@@ -109,6 +117,23 @@ Sition('demo','right',function(ev){
    alert('向右滑动')
 });
 
+Sition('demo','downIng',function(ev){
+   console.log('向下滑动中')
+});
+
+Sition('demo','upIng',function(ev){
+   console.log('向上滑动中')
+});
+
+Sition('demo','leftIng',function(ev){
+   console.log('向左滑动中')
+});
+
+Sition('demo','rightIng',function(ev){
+   console.log('向右滑动中')
+});
+
+
 Sition('demo','long',function(){
    alert('长按操作')
 });
@@ -116,5 +141,7 @@ Sition('demo','long',function(){
 Sition('demo','clicked',function(){
    alert('双击操作')
 });
+
+
 </script>
 </html>
